Add Unit Test (xUnit)

--- a/C-Sharp Demo/STAAC/STAAC/STAAC.csproj
+++ b/C-Sharp Demo/STAAC/STAAC/STAAC.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ExportTemplateForm.Designer.cs">
       <DependentUpon>ExportTemplateForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\ButtonModel.cs" />
     <Compile Include="NewNameForm.cs">
       <SubType>Form</SubType>
     </Compile>
